Completes index.html, sets basic structure for contact.html and portfolio.html

--- a/index.html
+++ b/index.html
@@ -60,20 +60,59 @@
 
     <div class="row">
 
-      <div class="col-md-8 col-sm-12 background">
+      <div class="col-md-8 col-sm-12">
 
-        <img src="./assets/images/main.jpg" alt="A Photo of Myself" title="A Photo of Myself" id="profilePicture" class="float-left">
+        <div class="col-md-12 background">
 
-        <p>Diving head first into coding has been a long time coming. My earliest exposure to it came while I was in middle school, in a basic computer programming class. All HTML in notepad. Throughout high school and college it was something I would touch on occasionally, always as just an aside. Fast forward 5 years out of college, and, having grown tired of the hours of my previous job, I started looking for a change.</p>
+          <h1>Donald Linnell</h1>
 
-        <p class="two">In January of 2018 I began a coding bootcamp in Houston. Come along and see what happens!</p>
+          <img src="./assets/images/main.jpg" alt="A Photo of Myself" title="A Photo of Myself" id="profilePicture" class="float-left">
+
+          <p>Diving head first into coding has been a long time coming. My earliest exposure to it came while I was in middle
+          school, in a basic computer programming class. All HTML in notepad. Throughout high school and college it was
+          something I would touch on occasionally, always as just an aside. Fast forward 5 years out of college, and, having
+          grown tired of the hours of my previous job, I started looking for a change.</p>
+
+          <p class="two">In January of 2018 I began a coding bootcamp in Houston. Come along and see what happens!</p>
+
+        </div>
 
       </div>
+
+      <div class="col-md-4 col-sm-12">
+
+        <div class="col-md-12 background outside">
+
+          <h2>Connect with Me</h2>
+
+          <a href="https://github.com/dlinnell2">
+            <img src="./assets/images/github.png" alt="Git Hub Logo" title="Click here to go to my GitHub profile" class="connect float-left">   
+        </a>
+
+        <a href="https://www.linkedin.com/in/donald-linnell-99795571/">
+            <img src="./assets/images/linkedin.png" alt="LinkedIn Logo" title="Click here to go to my LinkedIn profile" class="connect float-left">
+        </a>
+
+        <a href="https://stackoverflow.com/users/8811742/donald-linnell">
+            <img src="./assets/images/stack.png" alt="Stack Overflow Logo" title="Click here to go to my Stack Overflow profile" class="connect float-left">
+        </a>
+
+        </div>
+
+      </div>
+
+
 
     </div>
 
 
   </div>
+
+  <footer class="footer">
+      <div class="container">
+          &copy; Donald Linnell 2018
+      </div>
+    </footer>  
 
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
