--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,9 @@
 
       <ul class="navbar-nav">
 
-        <li class="nav-item active">
+        <li class="nav-item">
 
-          <a class="nav-link" href="#">About Me
+          <a class="nav-link" href="./index.html">About Me
             <span class="sr-only">(current)</span>
           </a>
 
@@ -44,7 +44,7 @@
 
         <li class="nav-item">
 
-          <a class="nav-link" href="./contact.html">Contact Me</a>
+          <a class="nav-link" href="#">Contact Me</a>
 
         </li>
 
