--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <ul class="navbar-nav">
 
-        <li class="nav-item active">
+        <li class="nav-item">
 
           <a class="nav-link" href="#">About Me
             <span class="sr-only">(current)</span>
