--- a/portfolio.html
+++ b/portfolio.html
@@ -28,9 +28,9 @@
 
       <ul class="navbar-nav">
 
-        <li class="nav-item active">
+        <li class="nav-item">
 
-          <a class="nav-link" href="#">About Me
+          <a class="nav-link" href="./index.html">About Me
             <span class="sr-only">(current)</span>
           </a>
 
@@ -38,7 +38,7 @@
 
         <li class="nav-item">
 
-          <a class="nav-link" href="./portfolio.html">My Portfolio</a>
+          <a class="nav-link" href="#">My Portfolio</a>
 
         </li>
 
