--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
 
           <h1>Donald Linnell</h1>
 
-          <img src="./assets/images/main.jpg" alt="A Photo of Myself" title="A Photo of Myself" id="profilePicture" class="float-left">
+
+          <img src="./assets/images/main.jpg" alt="A Photo of Myself" title="A Photo of Myself" id="profilePicture" class="float-left img-fluid">
+
 
           <p>Diving head first into coding has been a long time coming. My earliest exposure to it came while I was in middle
           school, in a basic computer programming class. All HTML in notepad. Throughout high school and college it was
