Completes all items

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <title>Document</title>
+  <title>Donald Linnell - About</title>
 </head>
 
 <body>
@@ -62,12 +62,16 @@
 
       <div class="col-md-8 col-sm-12">
 
-        <div class="col-md-12 background">
+        <div class="col-md-12 background about">
 
           <h1>Donald Linnell</h1>
 
 
-          <img src="./assets/images/main.jpg" alt="A Photo of Myself" title="A Photo of Myself" id="profilePicture" class="float-left img-fluid">
+
+
+          <img src="./assets/images/main.jpg" alt="A Photo of Myself" title="A Photo of Myself" id="profilePicture" class="float-left">
+
+          
 
 
           <p>Diving head first into coding has been a long time coming. My earliest exposure to it came while I was in middle
