--- a/portfolio.html
+++ b/portfolio.html
@@ -2,127 +2,173 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="./assets/css/style.css">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Donald Linnell - Portfolio</title>
 </head>
 
 <body>
 
-  <nav class="navbar sticky-top navbar-expand-md navbar-light">
+    <nav class="navbar sticky-top navbar-expand-md navbar-light">
 
-    <a class="navbar-brand" href="#">Donald Linnell</a>
+        <a class="navbar-brand" href="#">Donald Linnell</a>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-      aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+            aria-label="Toggle navigation">
 
-      <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
 
-    </button>
+        </button>
 
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 
-      <ul class="navbar-nav">
+            <ul class="navbar-nav">
 
-        <li class="nav-item">
+                <li class="nav-item">
 
-          <a class="nav-link" href="./index.html">About Me
-            <span class="sr-only">(current)</span>
-          </a>
+                    <a class="nav-link" href="./index.html">About Me
+                        <span class="sr-only">(current)</span>
+                    </a>
 
-        </li>
+                </li>
 
-        <li class="nav-item">
+                <li class="nav-item">
 
-          <a class="nav-link" href="#">My Portfolio</a>
+                    <a class="nav-link" href="#">My Portfolio</a>
 
-        </li>
+                </li>
 
-        <li class="nav-item">
+                <li class="nav-item">
 
-          <a class="nav-link" href="./contact.html">Contact Me</a>
+                    <a class="nav-link" href="./contact.html">Contact Me</a>
 
-        </li>
+                </li>
 
-      </ul>
-
-    </div>
-
-  </nav>
-
-  <br>
-
-  <div class="container">
-
-    <div class="row">
-
-      <div class="col-md-8 col-sm-12">
-
-        <div class="col-md-12 background">
-
-          <h1>Donald Linnell</h1>
-
-          <img src="./assets/images/main.jpg" alt="A Photo of Myself" title="A Photo of Myself" id="profilePicture" class="float-left">
-
-          <p>Diving head first into coding has been a long time coming. My earliest exposure to it came while I was in middle
-          school, in a basic computer programming class. All HTML in notepad. Throughout high school and college it was
-          something I would touch on occasionally, always as just an aside. Fast forward 5 years out of college, and, having
-          grown tired of the hours of my previous job, I started looking for a change.</p>
-
-          <p class="two">In January of 2018 I began a coding bootcamp in Houston. Come along and see what happens!</p>
+            </ul>
 
         </div>
 
-      </div>
+    </nav>
 
-      <div class="col-md-4 col-sm-12">
+    <br>
 
-        <div class="col-md-12 background outside">
+    <div class="container">
 
-          <h2>Connect with Me</h2>
+        <div class="row">
 
-          <a href="https://github.com/dlinnell2">
-            <img src="./assets/images/github.png" alt="Git Hub Logo" title="Click here to go to my GitHub profile" class="connect float-left">   
-        </a>
+            <div class="col-md-8 col-sm-12">
 
-        <a href="https://www.linkedin.com/in/donald-linnell-99795571/">
-            <img src="./assets/images/linkedin.png" alt="LinkedIn Logo" title="Click here to go to my LinkedIn profile" class="connect float-left">
-        </a>
+                <div class="col-md-12 background">
 
-        <a href="https://stackoverflow.com/users/8811742/donald-linnell">
-            <img src="./assets/images/stack.png" alt="Stack Overflow Logo" title="Click here to go to my Stack Overflow profile" class="connect float-left">
-        </a>
+                    <h1>My Portfolio</h1>
+
+                    <div class="container">
+
+                        <div class="row portRow">
+
+                            <div class="col-md-6 col-sm-12 portImage">
+
+                                <img src="./assets/images/port1.jpeg" alt="Picture of a circuit board" class="image">
+                                <div class="portText">Circuit Modeler</div>
+
+                            </div>
+
+                        
+
+                            <div class="col-md-6 col-sm-12 portImage">
+
+                                <img src="./assets/images/port2.jpg" alt="Picture of circuit board" class="image">
+                                <div class="portText">RPG</div>
+
+                            </div>
+
+                        </div>
+
+                    
+
+                        <div class="row portRow">
+
+                            <div class="col-md-6 col-sm-12 portImage">
+
+                                <img src="./assets/images/port3.jpg" alt="A picture of an LED TV" class="image">
+                                <div class="portText">Slime Volleyball</div>
+
+                            </div>
+
+                            <div class="col-md-6 col-sm-12 portImage">
+
+                                <img src="./assets/images/port4.jpg" alt="A picture of a tiger" class="image">
+                                <div class="portText">Hobbesian Animator</div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="row portRow">
+
+                            <div class="col-md-6 col-sm-12 portImage">
+
+                                <img src="./assets/images/port5.jpg" alt="A picture of a city" class="image">
+                                <div class="portText">Utility Layout Software</div>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="col-md-4 col-sm-12">
+
+                <div class="col-md-12 background outside">
+
+                    <h2>Connect with Me</h2>
+
+                    <a href="https://github.com/dlinnell2">
+                        <img src="./assets/images/github.png" alt="Git Hub Logo" title="Click here to go to my GitHub profile" class="connect float-left">
+                    </a>
+
+                    <a href="https://www.linkedin.com/in/donald-linnell-99795571/">
+                        <img src="./assets/images/linkedin.png" alt="LinkedIn Logo" title="Click here to go to my LinkedIn profile" class="connect float-left">
+                    </a>
+
+                    <a href="https://stackoverflow.com/users/8811742/donald-linnell">
+                        <img src="./assets/images/stack.png" alt="Stack Overflow Logo" title="Click here to go to my Stack Overflow profile" class="connect float-left">
+                    </a>
+
+                </div>
+
+            </div>
+
+
 
         </div>
-
-      </div>
-
 
 
     </div>
 
-
-  </div>
-
-  <footer class="footer">
-      <div class="container">
-          &copy; Donald Linnell 2018
-      </div>
-    </footer>  
+    <footer class="footer">
+        <div class="container">
+            &copy; Donald Linnell 2018
+        </div>
+    </footer>
 
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
 
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 
 </body>
 
